--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -2,6 +2,7 @@
 # Make sure tmux can find the scripts it needs
 # set-environment -g PATH "/usr/bin:/opt/homebrew/bin:$HOME/.files/scripts/tmux/"
 set-environment -g PATH "/usr/bin:/opt/homebrew/bin:$HOME/GitHub/rdnajac/.files/config/tmux/bin"
+set-environment -g PATH "/opt/homebrew/bin:/bin:/usr/bin"
 
 set -g status-keys emacs
 set-window-option -g mode-keys vi
@@ -124,12 +125,13 @@ set -s escape-time 69
 # set-hook -g pane-active 'if-shell "$is_vim" "set-option -g status off" "set-option -g status on"'
 # if-shell "$is_vim" "set-option -g status off" "set-option -g status on"
 
-# set -g @plugin 'erikw/tmux-powerline'
-# set -g @plugin 'tmuxin manager (keep-plugins/tmux-prefix-highlight'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-
-# Initialize TMUX plug this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+ set -g @tpm_plugins '            \
+   tmux-plugins/tpm               \
+   christoomey/vim-tmux-navigator \
+   tmux-plugins/tmux-sensible     \
+ '
 
 # TODO does this work?
 # run './config/tmux/plugins/tpm/tpm'
+# Initialize TMUX plug this line at the very bottom of tmux.conf)
+run '~/.config/tmux/plugins/tpm/tpm'
