--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -19,8 +19,11 @@ set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 # set -ga terminal-overrides ",alacritty:Tc"
 set -g mouse on
-unbind -n MouseDrag1Pane
-unbind -Tcopy-mode MouseDrag1Pane
+# unbind -n MouseDrag1Pane
+# unbind -Tcopy-mode MouseDrag1Pane
+# Let alacritty handle mouse events
+# unbind -n DoubleClick1
+# unbind -n TripleClick1
 
 # keymaps {{{
 set -g prefix2 C-f
