--- a/home/.alacritty.toml
+++ b/home/.alacritty.toml
@@ -31,6 +31,9 @@ bindings = [
   { key = "W", mods = "Command", action = "None" },
   { key = "T", mods = "Command", action = "None" },
   { key = "N", mods = "Command", action = "None" },
+  # FIXME:
+  # { key = "Return", mods = "Shift",   chars = "\u001B[13;2u" },
+  # { key = "Return", mods = "Control", chars = "\u001B[13;5u" },
 ]
 
 [selection]
