--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,8 +1,8 @@
 # vim: fdm=marker:fdl=1:nowrap
 # Make sure tmux can find the scripts it needs
 # set-environment -g PATH "/usr/bin:/opt/homebrew/bin:$HOME/.files/scripts/tmux/"
-set-environment -g PATH "/usr/bin:/opt/homebrew/bin:$HOME/GitHub/rdnajac/.files/config/tmux/bin"
-set-environment -g PATH "/opt/homebrew/bin:/bin:/usr/bin"
+set-environment -g PATH "/usr/bin:/opt/homebrew/bin:$HOME/.config/tmux/bin"
+# set-environment -g PATH "/opt/homebrew/bin:/bin:/usr/bin"
 
 set -g status-keys emacs
 set-window-option -g mode-keys vi
@@ -116,41 +116,20 @@ if-shell "uname | grep -q Darwin" {
   #set -g default-command "reattach-to-user-namespace -l $SHELL"
   bind-key -T copy-mode-vi 'y'    send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
   bind-key -T copy-mode-vi Enter  send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
-  #bind-key -T copy-mode-vi 'y'   send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-  #bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 }
 # }}}
 
 set -s escape-time 69
 
 # is_vim="ps -o comm= -t '#{pane_tty}' | grep -iqE '^(n?vim|view)$'"
-
 # set-hook -g pane-active 'if-shell "$is_vim" "set-option -g status off" "set-option -g status on"'
 # if-shell "$is_vim" "set-option -g status off" "set-option -g status on"
 
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
-
- # set -g @tpm_plugins '            \
- #   tmux-plugins/tpm               \
- #   tmux-plugins/tmux-sensible     \
- # '
 # Initialize TMUX plug this line at the very bottom of tmux.conf)
-# run '~/.config/tmux/plugins/tpm/tpm'
+# TODO add bootstrap script to install tpm
+# TODO can we use the .cache dir?
+run '~/.tmux/plugins/tpm/tpm'
