update zsh line editor

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -5,7 +5,7 @@
 set-environment -g PATH "$PATH:$HOME/.config/tmux/bin"
 
 set -g status-keys emacs
-set-window-option -g mode-keys vi
+# set-window-option -g mode-keys vi
 
 set -s escape-time 69
 set -g bell-action none
