--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -53,11 +53,12 @@ if-shell "uname | grep -q Darwin" {
 # is_vim="ps -o comm= -t '#{pane_tty}' | grep -iqE '^(n?vim|view)$'"
 # set-hook -g pane-active 'if-shell "$is_vim" "set-option -g status off" "set-option -g status on"'
 # if-shell "$is_vim" "set-option -g status off" "set-option -g status on"
-set-hook -g after-new-session 'run-shell "
-  if [ #{==:#{session_name},snacks-sesh} ]; then
-    tmux set -g status off;
-  fi
-"'
+# FIXME:
+# set-hook -g after-new-session 'run-shell "
+#   if [ #{==:#{session_name},snacks-sesh} ]; then
+#     tmux set -g status off;
+#   fi
+# "'
 # }}}
 
 # Use custom status bar in another file
