--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -34,6 +34,12 @@ bind q break-pane
 unbind n
 bind n new-window
 
+# resize panes with prefix + arrow
+bind -r Up resize-pane -U 5
+bind -r Down resize-pane -D 5
+bind -r Left resize-pane -L 5
+bind -r Right resize-pane -R 5
+
 bind \\ set-window-option synchronize-panes\; display-message "\
 	synchronize-panes = #{?pane_synchronized,on,off}"
 
