tmux conf updates

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -3,9 +3,23 @@
 
 # Make sure tmux can find the scripts it needs
 set-environment -g PATH "$PATH:$HOME/.config/tmux/bin"
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.tmux/plugins/"
 
-set -g status-keys emacs
-# set-window-option -g mode-keys vi
+# bind-key r run-shell "tmux source-file ${TMUX_CONF} > /dev/null; tmux display-message 'sourced tmux configuration!'"
+# use the tmux variable current_file anf format that line
+# bind-key r run-shell "tmux source-file #{current_file} > /dev/null"
+# display-message 'sourcing:  #{current_file}!'"
+# display-message 'basename:  #{b:current_file}!'"
+# display-message 'dirname  #{d:current_file}!'"
+
+# tmux source-file #{} > /dev/null; 
+# bind r source-file -F "#{current_file}" \; display-message "Reloaded tmux config!"
+# bind r display-message -F "Reloaded #{current_file}!"
+# setenv -gF tmux_conf_file '#{current_file}'
+# bind r source-file -F '#{current_file}'
+# HACK: Set the environment variable to the current file to access it with tmux format?
+set-environment -Fhg config_file "#{current_file}"
+bind r source-file -F "#{config_file}" \; display-message "Reloaded #{config_file}!"
 
 set -s escape-time 69
 set -g bell-action none
@@ -41,20 +55,14 @@ bind -r Left resize-pane -L 5
 bind -r Right resize-pane -R 5
 
 bind \\ set-window-option synchronize-panes\; display-message "\
-	synchronize-panes = #{?pane_synchronized,on,off}"
+synchronize-panes = #{?pane_synchronized,on,off}"
 
-# reload config
-bind-key r run-shell " \
-  tmux source-file ~/.tmux.conf > /dev/null; \
-  tmux display-message 'sourced ~/.tmux.conf!'"
 
-# TODO: check if this is still necessary with tmux-yank {{{
 if-shell "uname | grep -q Darwin" {
   #set -g default-command "reattach-to-user-namespace -l $SHELL"
   bind-key -T copy-mode-vi 'y'    send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
   bind-key -T copy-mode-vi Enter  send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
 }
-# }}}
 # TODO: no status bar for vim terminals or nested sessions over ssh {{{
 # is_vim="ps -o comm= -t '#{pane_tty}' | grep -iqE '^(n?vim|view)$'"
 # set-hook -g pane-active 'if-shell "$is_vim" "set-option -g status off" "set-option -g status on"'
@@ -77,16 +85,22 @@ if-shell "uname | grep -q Darwin" {
   source-file ~/.config/tmux/copy-linux.conf
 }
 
-# List plugins here
-set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-# set -g @plugin 'tmux-Plugins/tmux-yank'
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
 
-setenv -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.tmux/plugins/"
-if "test ! -d ~/.tmux/plugins/tpm" \
-   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
-# Initialize TMUX plug this line at the very bottom of tmux.conf)
-# TODO add bootstrap script to install tpm
-# TODO can we use the .cache dir?
-run '~/.tmux/plugins/tpm/tpm'
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
