--- a/config/tmux/mystatusbar.conf
+++ b/config/tmux/mystatusbar.conf
@@ -1,5 +1,4 @@
 # vim: ft=tmux
-# status bar {{{
 set-option -g status-position top
 # https://github.com/folke/tokyonight.nvim/blob/main/extras/tmux/tokyonight_night.tmux
 # ~/.local/share/nvim/lazy/tokyonight.nvim/extras/tmux/tokyonight_night.tmux
@@ -23,30 +22,24 @@ set -ga status-left "#{?#{==:#{server_sessions},1},,#[fg=#15161e,bg=#7aa2f7,bold
 set -ga status-left "#{?#{==:#{session_windows},1},,#[fg=#15161e,bg=#7aa2f7,bold] Win:#I }"
 set -ga status-left "#{?#{==:#{window_panes},1},,#[fg=#15161e,bg=#7aa2f7,bold] Pane:#P }"
 set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics] "
-set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,bold]👾#{pane_current_command} "
-set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,bold]📂#{pane_current_path}"
+set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,bold] #{pane_current_command} "
+set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,bold] #{pane_current_path}"
 # set -ga status-left "#{?#{==:#{window_index},0},#[fg=#3b4261,bg=#3b4261,nobold,nounderscore,noitalics] ,#[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]} "
 
 setw -g window-status-separator ""
 setw -g window-status-style "NONE,fg=#a9b1d6,bg=default"
 setw -g window-status-format "#[fg=#a9b1d6,bg=default] #I:#P:#W [#F]"
 setw -g window-status-activity-style "underscore,fg=#e0af68,bg=default"
-# setw -g window-status-current-style "bold,fg=default,bg=#3b4261"
-# setw -g window-status-current-format "#[fg=#FFFFFF,bg=#3b4261,bold] #I:#P:#W [#F] #[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=#FFFFFF,bg=#3b4261,bold] [#F] #[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]"
 setw -g window-status-last-style "bold,fg=#f7768e,bg=default"
 
 set -g status-right ""
-# set -ga status-right "#[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]"
-# set -ga status-right "#[fg=#7aa2f7,bg=#3b4261] 💻 #(tmux-mem-cpu-load.sh)  #(tmux-battery) "
-set -ga status-right "#[fg=#FFFFFF,bg=default] 💻 #(tmux-mem-cpu-load)  "
+set -ga status-right "#[fg=#ffffff,bg=default]  #(tmux-mem-cpu-load)  "
 set -ga status-right "#[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]"
-# ~/.tmux/bin/tmux-battery.sh
 set -ga status-right "#[fg=#7aa2f7,bg=#3b4261] #(tmux-battery.sh) "
 set -ga status-right "#[fg=#16161e,bg=#default,nobold,nounderscore,noitalics]"
-set -ga status-right "#[fg=#15161e,bg=#7aa2f7,bold] %U 🗓️ %a  ⏱️ %s \ "
+set -ga status-right "#[fg=#15161e,bg=#7aa2f7,bold]  %U:%a   %s \ "
 
 # tmux-plugins/tmux-prefix-highlight suppor\t
 # set -g @prefix_highlight_output_prefix "#[fg=#e0af68]#[bg=#16161e]#[fg=#16161e]#[bg=#e0af68]"
 # set -g @prefix_highlight_output_suffix ""
-# }}}
