--- a/config/tmux/mystatusbar.conf
+++ b/config/tmux/mystatusbar.conf
@@ -1,4 +1,3 @@
-# vim: ft=tmux
 set-option -g status-position top
 # https://github.com/folke/tokyonight.nvim/blob/main/extras/tmux/tokyonight_night.tmux
 # ~/.local/share/nvim/lazy/tokyonight.nvim/extras/tmux/tokyonight_night.tmux
@@ -23,7 +22,8 @@ set -ga status-left "#{?#{==:#{session_windows},1},,#[fg=#15161e,bg=#7aa2f7,bold
 set -ga status-left "#{?#{==:#{window_panes},1},,#[fg=#15161e,bg=#7aa2f7,bold] Pane:#P }"
 set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics] "
 set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,bold] #{pane_current_command} "
-set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,bold] #{pane_current_path}"
+# set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,bold] #{pane_current_path}"
+set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,bold] #(pwd.sh) "
 # set -ga status-left "#{?#{==:#{window_index},0},#[fg=#3b4261,bg=#3b4261,nobold,nounderscore,noitalics] ,#[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]} "
 
 setw -g window-status-separator ""
