update config for compat

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -3,20 +3,8 @@
 
 # Make sure tmux can find the scripts it needs
 set-environment -g PATH "$PATH:$HOME/.config/tmux/bin"
-set-environment -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.tmux/plugins/"
+# set-environment -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.tmux/plugins/"
 
-# bind-key r run-shell "tmux source-file ${TMUX_CONF} > /dev/null; tmux display-message 'sourced tmux configuration!'"
-# use the tmux variable current_file anf format that line
-# bind-key r run-shell "tmux source-file #{current_file} > /dev/null"
-# display-message 'sourcing:  #{current_file}!'"
-# display-message 'basename:  #{b:current_file}!'"
-# display-message 'dirname  #{d:current_file}!'"
-
-# tmux source-file #{} > /dev/null; 
-# bind r source-file -F "#{current_file}" \; display-message "Reloaded tmux config!"
-# bind r display-message -F "Reloaded #{current_file}!"
-# setenv -gF tmux_conf_file '#{current_file}'
-# bind r source-file -F '#{current_file}'
 # HACK: Set the environment variable to the current file to access it with tmux format?
 set-environment -Fhg config_file "#{current_file}"
 bind r source-file -F "#{config_file}" \; display-message "Reloaded #{config_file}!"
@@ -37,7 +25,9 @@ set -g mouse on
 unbind -Tcopy-mode MouseDrag1Pane
 
 # keymaps {{{
-set -g prefix2 C-f
+# set -g prefix2 C-f
+set -g prefix C-f
+unbind C-b
 bind f send-prefix
 bind b send-prefix
 bind | split-window -h     # split panes horizontally `"`
@@ -56,7 +46,6 @@ bind -r Right resize-pane -R 5
 
 bind \\ set-window-option synchronize-panes\; display-message "\
 synchronize-panes = #{?pane_synchronized,on,off}"
-
 
 if-shell "uname | grep -q Darwin" {
   #set -g default-command "reattach-to-user-namespace -l $SHELL"
