--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -25,9 +25,7 @@ set -g mouse on
 unbind -Tcopy-mode MouseDrag1Pane
 
 # keymaps {{{
-# set -g prefix2 C-f
-set -g prefix C-f
-unbind C-b
+set -g prefix2 C-f
 bind f send-prefix
 bind b send-prefix
 bind | split-window -h     # split panes horizontally `"`
