use shared folder for vim and nvim configs

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -32,7 +32,7 @@ bind | split-window -h     # split panes horizontally `"`
 bind - split-window -v     # split panes vertically `%`
 bind Tab next-window       # cycle through windows
 bind i set status          # toggle status bar
-bind q break-pane
+# bind q break-pane
 unbind n
 bind n new-window
 
