--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -2722,3 +2722,7 @@ bold_italic_font auto
 
 include mykitty.conf
 include tokyonight.conf
+background_opacity 0.8
+background_blur 8
+background_tint 88
+
