update shell conf

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -2722,7 +2722,6 @@ bold_italic_font auto
 
 include mykitty.conf
 include tokyonight.conf
-background_opacity 0.8
-background_blur 8
-background_tint 88
-
+# background_blur 5
+background_opacity 0.93
+# background_tint .5
