--- a/config/kitty/mykitty.conf
+++ b/config/kitty/mykitty.conf
@@ -1,6 +1,9 @@
-font_size 13.0
 disable_ligatures always
+editor /opt/nvim-macos-arm64/bin/nvim
 font_features none
-window_padding_width 2
+font_size 13.0
 hide_window_decorations titlebar-only
 macos_option_as_alt both
+map ctrl+shift+h next_tab
+map ctrl+shift+l previous_tab
+window_padding_width 2
