--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -14,10 +14,10 @@ set -g bell-action none
 set -g focus-events on
 set -g visual-activity on
 set -g monitor-activity on
-set -g history-limit 50000
-set -g default-terminal "tmux-256color"
+set -g history-limit 42069
+# set -g default-terminal "tmux-256color"
 # set -as terminal-features ",alacritty*:RGB"
-set -ga terminal-overrides ",*256col*:Tc"
+# set -ga terminal-overrides ",*256col*:Tc"
 # set -ga terminal-overrides ",alacritty:Tc"
 # set -sa terminal-overrides ',xterm-256color:RGB'
 set -g mouse on
@@ -72,8 +72,8 @@ if-shell "uname | grep -q Darwin" {
   source-file ~/.config/tmux/copy-linux.conf
 }
 
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
+# smart pane switching with awareness of Vim splits
+# https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
 bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
 bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
