'merge' with chezmoi branch

--- a/dot_config/kitty/mykitty.conf
+++ b/dot_config/kitty/mykitty.conf
@@ -1,3 +1,13 @@
+# BEGIN_KITTY_FONTS
+font_family      family="JetBrains Mono"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
+
+# background_blur 5
+# background_opacity 0.93
+# background_tint .5
 disable_ligatures always
 editor /opt/nvim-macos-arm64/bin/nvim
 font_features none
