--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,11 +1,8 @@
-# vim: fdm=marker:fdl=1:nowrap
-# check out https://github.com/gpakosz/.tmux/blob/master/.tmux.conf
-
+# set-environment -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.tmux/plugins/"
 # Make sure tmux can find the scripts it needs
 set-environment -g PATH "$PATH:$HOME/.config/tmux/bin"
-# set-environment -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.tmux/plugins/"
 
-# HACK: Set the environment variable to the current file to access it with tmux format?
+# HACK: Set the environment variable to the current file to access it with tmux format
 set-environment -Fhg config_file "#{current_file}"
 bind r source-file -F "#{config_file}" \; display-message "Reloaded #{config_file}!"
 
@@ -24,7 +21,6 @@ set -g mouse on
 # unbind -n MouseDrag1Pane
 unbind -Tcopy-mode MouseDrag1Pane
 
-# keymaps {{{
 set -g prefix2 C-f
 bind f send-prefix
 bind b send-prefix
@@ -32,7 +28,6 @@ bind | split-window -h     # split panes horizontally `"`
 bind - split-window -v     # split panes vertically `%`
 bind Tab next-window       # cycle through windows
 bind i set status          # toggle status bar
-# bind q break-pane
 unbind n
 bind n new-window
 
@@ -50,20 +45,8 @@ if-shell "uname | grep -q Darwin" {
   bind-key -T copy-mode-vi 'y'    send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
   bind-key -T copy-mode-vi Enter  send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
 }
-# TODO: no status bar for vim terminals or nested sessions over ssh {{{
-# is_vim="ps -o comm= -t '#{pane_tty}' | grep -iqE '^(n?vim|view)$'"
-# set-hook -g pane-active 'if-shell "$is_vim" "set-option -g status off" "set-option -g status on"'
-# if-shell "$is_vim" "set-option -g status off" "set-option -g status on"
-# FIXME:
-# set-hook -g after-new-session 'run-shell "
-#   if [ #{==:#{session_name},snacks-sesh} ]; then
-#     tmux set -g status off;
-#   fi
-# "'
-# }}}
-
 # Use custom status bar in another file
-source-file ~/.config/tmux/mystatusbar.conf
+# source-file ~/.config/tmux/mystatusbar.conf
 
 # copy/paste
 if-shell "uname | grep -q Darwin" {
