--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,10 +1,15 @@
 # set-environment -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.tmux/plugins/"
 # Make sure tmux can find the scripts it needs
-set-environment -g PATH "$PATH:$HOME/.config/tmux/bin"
+set-environment -g TMUX_HOME "$HOME/.config/tmux"
+set-environment -g PATH "$PATH:$TMUX_HOME/bin"
 
 # HACK: Set the environment variable to the current file to access it with tmux format
 set-environment -Fhg config_file "#{current_file}"
 bind r source-file -F "#{config_file}" \; display-message "Reloaded #{config_file}!"
+
+source-file "$TMUX_HOME/navigator.conf"
+source-file "$TMUX_HOME/copy.conf"
+source-file "$TMUX_HOME/mystatusbar.conf"
 
 set -s escape-time 69
 set -g bell-action none
@@ -12,11 +17,6 @@ set -g focus-events on
 set -g visual-activity on
 set -g monitor-activity on
 set -g history-limit 42069
-# set -g default-terminal "tmux-256color"
-# set -as terminal-features ",alacritty*:RGB"
-# set -ga terminal-overrides ",*256col*:Tc"
-# set -ga terminal-overrides ",alacritty:Tc"
-# set -sa terminal-overrides ',xterm-256color:RGB'
 set -g mouse on
 # unbind -n MouseDrag1Pane
 unbind -Tcopy-mode MouseDrag1Pane
@@ -45,25 +45,3 @@ if-shell "uname | grep -q Darwin" {
   bind-key -T copy-mode-vi 'y'    send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
   bind-key -T copy-mode-vi Enter  send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
 }
-# Use custom status bar in another file
-# source-file ~/.config/tmux/mystatusbar.conf
-
-# copy/paste
-if-shell "uname | grep -q Darwin" {
-  source-file ~/.config/tmux/copy-macos.conf
-} {
-  source-file ~/.config/tmux/copy-linux.conf
-}
-
-# smart pane switching with awareness of Vim splits
-# https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
-
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
