--- a/dot_config/tmux/mystatusbar.conf
+++ b/dot_config/tmux/mystatusbar.conf
@@ -2,7 +2,8 @@ set-option -g status-position top
 # https://github.com/folke/tokyonight.nvim/blob/main/extras/tmux/tokyonight_night.tmux
 # ~/.local/share/nvim/lazy/tokyonight.nvim/extras/tmux/tokyonight_night.tmux
 
-set -g status-interval 1
+# PERF:
+set -g status-interval .01
 set -g mode-style "bg=#7aa2f7,fg=#3b4261"
 set -g message-style "bg=#7aa2f7,fg=#3b4261"
 set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
@@ -16,30 +17,33 @@ set -g status-right-length "100"
 set -g status-left-style NONE
 set -g status-right-style NONE
 
-set -g status-left ""
-set -ga status-left "#{?#{==:#{server_sessions},1},,#[fg=#15161e,bg=#7aa2f7,bold] Sesh:#S }"
-set -ga status-left "#{?#{==:#{session_windows},1},,#[fg=#15161e,bg=#7aa2f7,bold] Win:#I }"
-set -ga status-left "#{?#{==:#{window_panes},1},,#[fg=#15161e,bg=#7aa2f7,bold] Pane:#P }"
-set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics] "
-set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,bold] #{pane_current_command} "
-# set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,bold] #{pane_current_path}"
-set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,bold] #(pwd.sh) "
-# set -ga status-left "#{?#{==:#{window_index},0},#[fg=#3b4261,bg=#3b4261,nobold,nounderscore,noitalics] ,#[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]} "
-
+set -g status-left "#(nvim-left.sh)"
+set -g status-right "#(nvim-right.sh)"
+#
+# set -g status-left ""
+# set -ga status-left "#{?#{==:#{server_sessions},1},,#[fg=#15161e,bg=#7aa2f7,bold] Sesh:#S }"
+# set -ga status-left "#{?#{==:#{session_windows},1},,#[fg=#15161e,bg=#7aa2f7,bold] Win:#I }"
+# set -ga status-left "#{?#{==:#{window_panes},1},,#[fg=#15161e,bg=#7aa2f7,bold] Pane:#P }"
+# set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics] "
+# set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,bold] #{pane_current_command} "
+# # set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]  "
+# set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,bold]  #(nvim-tmux.sh)"
+#
 setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#a9b1d6,bg=default"
-setw -g window-status-format "#[fg=#a9b1d6,bg=default] #I:#P:#W [#F]"
-setw -g window-status-activity-style "underscore,fg=#e0af68,bg=default"
-setw -g window-status-current-format "#[fg=#FFFFFF,bg=#3b4261,bold] [#F] #[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]"
-setw -g window-status-last-style "bold,fg=#f7768e,bg=default"
-
-set -g status-right ""
-set -ga status-right "#[fg=#ffffff,bg=default]  #(tmux-mem-cpu-load)  "
-set -ga status-right "#[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]"
-set -ga status-right "#[fg=#7aa2f7,bg=#3b4261] #(tmux-battery.sh) "
-set -ga status-right "#[fg=#16161e,bg=#default,nobold,nounderscore,noitalics]"
-set -ga status-right "#[fg=#15161e,bg=#7aa2f7,bold]  %U:%a   %s \ "
-
-# tmux-plugins/tmux-prefix-highlight suppor\t
-# set -g @prefix_highlight_output_prefix "#[fg=#e0af68]#[bg=#16161e]#[fg=#16161e]#[bg=#e0af68]"
-# set -g @prefix_highlight_output_suffix ""
+# setw -g window-status-style "NONE,fg=#a9b1d6,bg=default"
+# setw -g window-status-format "#[fg=#a9b1d6,bg=default] #I:#P:#W [#F]"
+# setw -g window-status-activity-style "underscore,fg=#e0af68,bg=default"
+# setw -g window-status-current-format "#[fg=#FFFFFF,bg=#3b4261,bold] [#F] #[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format ""
+# setw -g window-status-last-style "bold,fg=#f7768e,bg=default"
+#
+# set -g status-right ""
+# # set -ga status-right "#[fg=#ffffff,bg=default]  #(tmux-mem-cpu-load)  "
+# # set -ga status-right "#[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]"
+# # set -ga status-right "#[fg=#7aa2f7,bg=#3b4261] #(tmux-battery.sh) "
+# set -ga status-right "#[fg=#16161e,bg=#default,nobold,nounderscore,noitalics]"
+# set -ga status-right "#[fg=#15161e,bg=#7aa2f7,bold]  %U:%a   %s \ "
+#
+# # tmux-plugins/tmux-prefix-highlight suppor\t
+# # set -g @prefix_highlight_output_prefix "#[fg=#e0af68]#[bg=#16161e]#[fg=#16161e]#[bg=#e0af68]"
+# # set -g @prefix_highlight_output_suffix ""
