configure authorized keys

--- a/dot_config/tmux/statusbar.conf
+++ b/dot_config/tmux/statusbar.conf
@@ -3,7 +3,7 @@ set-option -g status-position top
 # ~/.local/share/nvim/lazy/tokyonight.nvim/extras/tmux/tokyonight_night.tmux
 
 # PERF:
-set -g status-interval .01
+set -g status-interval 1
 set -g mode-style "bg=#7aa2f7,fg=#3b4261"
 set -g message-style "bg=#7aa2f7,fg=#3b4261"
 set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
@@ -29,11 +29,11 @@ set -g status-right "#(nvim-right.sh)"
 # # set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]  "
 # set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,bold]  #(nvim-tmux.sh)"
 #
-setw -g window-status-separator ""
-# setw -g window-status-style "NONE,fg=#a9b1d6,bg=default"
-# setw -g window-status-format "#[fg=#a9b1d6,bg=default] #I:#P:#W [#F]"
-# setw -g window-status-activity-style "underscore,fg=#e0af68,bg=default"
-# setw -g window-status-current-format "#[fg=#FFFFFF,bg=#3b4261,bold] [#F] #[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]"
+setw -g window-status-separator ""
+setw -g window-status-style "NONE,fg=#a9b1d6,bg=default"
+setw -g window-status-format "#[fg=#a9b1d6,bg=default] #I:#P:#W [#F]"
+setw -g window-status-activity-style "underscore,fg=#e0af68,bg=default"
+setw -g window-status-current-format "#[fg=#FFFFFF,bg=#3b4261,bold] [#F] #[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format ""
 # setw -g window-status-last-style "bold,fg=#f7768e,bg=default"
 #
