--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -7,9 +7,9 @@ set-environment -g PATH "$PATH:$TMUX_HOME/bin"
 set-environment -Fhg config_file "#{current_file}"
 bind r source-file -F "#{config_file}" \; display-message "Reloaded #{config_file}!"
 
-source-file "$TMUX_HOME/navigator.conf"
-source-file "$TMUX_HOME/copy.conf"
-source-file "$TMUX_HOME/mystatusbar.conf"
+source-file "$HOME/.config/tmux/navigator.conf"
+source-file "$HOME/.config/tmux/copy.conf"
+source-file "$HOME/.config/tmux/statusbar.conf"
 
 set -s escape-time 69
 set -g bell-action none
