organize env files

--- a/dot_config/tmux/statusbar.conf
+++ b/dot_config/tmux/statusbar.conf
@@ -1,19 +1,21 @@
-set-option -g status-position top
 # https://github.com/folke/tokyonight.nvim/blob/main/extras/tmux/tokyonight_night.tmux
 # ~/.local/share/nvim/lazy/tokyonight.nvim/extras/tmux/tokyonight_night.tmux
 
 # PERF:
-set -g status-interval 1
+set -g status "on"
+set-option -g status-position top
+# set -g status-interval 1
 set -g mode-style "bg=#7aa2f7,fg=#3b4261"
 set -g message-style "bg=#7aa2f7,fg=#3b4261"
 set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
 set -g pane-border-style "fg=#3b4261"
 set -g pane-active-border-style "fg=#7aa2f7"
-set -g status "on"
 set -g status-justify "left"
 set -g status-style "fg=#7aa2f7,bg=default"
+
 set -g status-left-length "100"
 set -g status-right-length "100"
+
 set -g status-left-style NONE
 set -g status-right-style NONE
 
