tmux-nvim integration and better zdotdir

--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -30,8 +30,10 @@ brew "cowsay"
 brew "cscope"
 brew "ctags"
 brew "curl"
+brew "ddgr"
 brew "docker"
 brew "doxygen"
+brew "figlet"
 brew "icu4c@76"
 brew "fontforge"
 brew "fortune"
@@ -76,6 +78,7 @@ brew "qt@5"
 brew "r"
 brew "ruby-install"
 brew "sdl2"
+brew "shfmt"
 brew "siege"
 brew "stylua"
 brew "telnet"
@@ -85,6 +88,7 @@ brew "tree"
 brew "wget"
 brew "wireshark"
 brew "yarn"
+brew "zsh-completions"
 brew "gromgit/fuse/s3fs-mac"
 cask "ghostty"
 cask "macfuse"
