--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -1,10 +1,10 @@
 command = /opt/homebrew/bin/tmux new-session -A -s ghostty
 theme = tokyonight_night
-background = #000000
-background-opacity = .8
-background-blur = true
+background = #16161d
+# background-opacity = .8
+# background-blur = true
 # window-decoration = false
 font-feature = -calt, -liga, -dlig
 font-size = 13
 # fullscreen = true
-macos-non-native-fullscreen = true
+# macos-non-native-fullscreen = true
