--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -11,6 +11,7 @@ brew "python@3.12"
 brew "automake"
 brew "awscli"
 brew "bash"
+brew "bat"
 brew "grpc"
 brew "bear"
 brew "bison"
@@ -33,6 +34,8 @@ brew "curl"
 brew "ddgr"
 brew "docker"
 brew "doxygen"
+brew "eza"
+brew "fd"
 brew "figlet"
 brew "icu4c@76"
 brew "fontforge"
@@ -76,6 +79,7 @@ brew "pyvim"
 brew "qt"
 brew "qt@5"
 brew "r"
+brew "ripgrep"
 brew "ruby-install"
 brew "sdl2"
 brew "shfmt"
@@ -88,6 +92,7 @@ brew "tree"
 brew "wget"
 brew "wireshark"
 brew "yarn"
+brew "zoxide"
 brew "zsh-completions"
 brew "gromgit/fuse/s3fs-mac"
 cask "ghostty"
