--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -1,5 +1,6 @@
 tap "gromgit/fuse"
 tap "kde-mac/kde", "https://invent.kde.org/packaging/homebrew-kde.git"
+brew "act"
 brew "xz"
 brew "zstd"
 brew "jpeg-xl"
@@ -61,10 +62,11 @@ brew "lazygit"
 brew "libffi"
 brew "libyaml"
 brew "lolcat"
-brew "macvim"
+brew "macvim", link: false
 brew "mercurial"
 brew "zlib"
 brew "mysql"
+brew "neovim"
 brew "ninja"
 brew "node"
 brew "ocaml"
