--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -46,7 +46,6 @@ brew "gawk"
 brew "gcc"
 brew "gdbm"
 brew "gh"
-brew "libarchive"
 brew "git"
 brew "git-filter-repo"
 brew "go"
@@ -59,6 +58,7 @@ brew "htslib"
 brew "imagemagick"
 brew "jq"
 brew "lazygit"
+brew "libarchive"
 brew "libffi"
 brew "libyaml"
 brew "lolcat"
@@ -84,22 +84,26 @@ brew "r"
 brew "ripgrep"
 brew "ruby-install"
 brew "sdl2"
+brew "shellcheck"
 brew "shfmt"
 brew "siege"
+brew "spotify_player"
 brew "stylua"
 brew "telnet"
 brew "the_silver_searcher"
 brew "tmux"
 brew "tree"
+brew "tree-sitter-cli"
+brew "vint"
 brew "wget"
 brew "wireshark"
 brew "yarn"
 brew "zoxide"
 brew "zsh-completions"
 brew "gromgit/fuse/s3fs-mac"
+cask "basictex"
 cask "ghostty"
 cask "macfuse"
-cask "mactex"
 cask "notunes"
 cask "quarto"
 cask "skim"
