--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -56,6 +56,7 @@ brew "gtkmm"
 brew "htop"
 brew "htslib"
 brew "imagemagick"
+brew "ipython"
 brew "jq"
 brew "lazygit"
 brew "libarchive"
@@ -102,7 +103,7 @@ brew "zoxide"
 brew "zsh-completions"
 brew "gromgit/fuse/s3fs-mac"
 cask "basictex"
-cask "ghostty"
+cask "ghostty@tip"
 cask "macfuse"
 cask "notunes"
 cask "quarto"
