small nvim updates

--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -46,6 +46,8 @@ brew "gawk"
 brew "gcc"
 brew "gdbm"
 brew "gh"
+brew "libarchive"
+brew "ghostscript"
 brew "git"
 brew "git-filter-repo"
 brew "go"
@@ -58,8 +60,8 @@ brew "htslib"
 brew "imagemagick"
 brew "ipython"
 brew "jq"
+brew "lazydocker"
 brew "lazygit"
-brew "libarchive"
 brew "libffi"
 brew "libyaml"
 brew "lolcat"
@@ -107,4 +109,5 @@ cask "ghostty@tip"
 cask "macfuse"
 cask "notunes"
 cask "quarto"
+cask "scroll-reverser"
 cask "skim"
