update git aliases

--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -8,6 +8,7 @@ brew "aom"
 brew "gettext"
 brew "openssl@3"
 brew "readline"
+brew "sqlite"
 brew "python@3.12"
 brew "automake"
 brew "awscli"
@@ -63,6 +64,7 @@ brew "jq"
 brew "lazydocker"
 brew "lazygit"
 brew "libffi"
+brew "libxlsxwriter"
 brew "libyaml"
 brew "lolcat"
 brew "macvim", link: false
@@ -97,9 +99,11 @@ brew "the_silver_searcher"
 brew "tmux"
 brew "tree"
 brew "tree-sitter-cli"
+brew "vim"
 brew "vint"
 brew "wget"
 brew "wireshark"
+brew "yajl"
 brew "yarn"
 brew "zoxide"
 brew "zsh-completions"
