--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -39,6 +39,7 @@ brew "doxygen"
 brew "eza"
 brew "fd"
 brew "figlet"
+brew "fish"
 brew "fontforge"
 brew "fortune"
 brew "fzf"
@@ -92,6 +93,7 @@ brew "shfmt"
 brew "siege"
 brew "spotify_player"
 brew "telnet"
+brew "thefuck"
 brew "tmux"
 brew "tree"
 brew "vim"
