clean up zdotdir

--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -5,6 +5,9 @@ brew "xz"
 brew "zstd"
 brew "jpeg-xl"
 brew "aom"
+brew "gdbm"
+brew "perl"
+brew "asciiquarium"
 brew "gettext"
 brew "openssl@3"
 brew "readline"
@@ -24,15 +27,22 @@ brew "tree-sitter"
 brew "emacs"
 brew "cask"
 brew "ccache"
+brew "cfssl"
 brew "librsvg"
 brew "chafa"
 brew "chezmoi"
 brew "chruby"
 brew "cmake"
+brew "gcc"
+brew "pkgconf"
+brew "imagemagick"
+brew "libarchive"
+brew "copyparty"
 brew "cowsay"
 brew "cscope"
 brew "ctags"
 brew "curl"
+brew "dash-shell"
 brew "ddgr"
 brew "docker"
 brew "doxygen"
@@ -44,10 +54,7 @@ brew "fontforge"
 brew "fortune"
 brew "fzf"
 brew "gawk"
-brew "gcc"
-brew "gdbm"
 brew "gh"
-brew "libarchive"
 brew "ghostscript"
 brew "git"
 brew "git-filter-repo"
@@ -58,12 +65,13 @@ brew "gtk+"
 brew "gtkmm"
 brew "htop"
 brew "htslib"
+brew "hugo"
 brew "icu4c@76"
-brew "imagemagick"
 brew "ipython"
 brew "jq"
 brew "lazydocker"
 brew "lazygit"
+brew "lftp"
 brew "libffi"
 brew "libxlsxwriter"
 brew "libyaml"
@@ -71,16 +79,13 @@ brew "lolcat"
 brew "mercurial"
 brew "zlib"
 brew "mysql"
-brew "neovim"
 brew "ninja"
 brew "node"
 brew "ocaml"
 brew "opam"
 brew "openjdk"
 brew "pandoc"
-brew "perl"
 brew "pipx"
-brew "pkgconf"
 brew "prettier"
 brew "pyvim"
 brew "qt"
