--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -17,14 +17,13 @@ brew "automake"
 brew "awscli"
 brew "bash"
 brew "bat"
-brew "grpc"
 brew "bear"
 brew "bison"
 brew "boost"
 brew "cairo"
 brew "coreutils"
-brew "tree-sitter"
 brew "emacs"
+brew "tree-sitter"
 brew "cask"
 brew "ccache"
 brew "cfssl"
@@ -60,6 +59,7 @@ brew "git"
 brew "git-filter-repo"
 brew "go"
 brew "grip"
+brew "grpc"
 brew "gsl"
 brew "gtk+"
 brew "gtkmm"
@@ -77,6 +77,7 @@ brew "libxlsxwriter"
 brew "libyaml"
 brew "lolcat"
 brew "mercurial"
+brew "mole"
 brew "zlib"
 brew "mysql"
 brew "ninja"
@@ -117,3 +118,12 @@ cask "notunes"
 cask "quarto"
 cask "scroll-reverser"
 cask "skim"
+cargo "bottom"
+cargo "cargo-update"
+cargo "du-dust"
+cargo "hexyl"
+cargo "pokeget"
+cargo "procs"
+cargo "so"
+cargo "tealdeer"
+cargo "tokei"
