rm symlink to nvim

--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -40,6 +40,7 @@ brew "dash-shell"
 brew "ddgr"
 brew "docker"
 brew "doxygen"
+brew "dust"
 brew "eza"
 brew "fd"
 brew "figlet"
@@ -50,8 +51,6 @@ brew "fzf"
 brew "gawk"
 brew "gcc"
 brew "gh"
-brew "libarchive"
-brew "ghostscript"
 brew "git"
 brew "go"
 brew "grip"
@@ -69,6 +68,7 @@ brew "jq"
 brew "lazydocker"
 brew "lazygit"
 brew "lftp"
+brew "libarchive"
 brew "libffi"
 brew "libxlsxwriter"
 brew "libyaml"
@@ -78,6 +78,7 @@ brew "zlib"
 brew "mysql"
 brew "ninja"
 brew "node"
+brew "nushell"
 brew "ocaml"
 brew "opam"
 brew "openjdk"
@@ -95,6 +96,7 @@ brew "shfmt"
 brew "siege"
 brew "telnet"
 brew "thefuck"
+brew "tldr"
 brew "tmux"
 brew "tree"
 brew "vim"
@@ -106,7 +108,7 @@ brew "zoxide"
 brew "zsh-completions"
 brew "gromgit/fuse/s3fs-mac"
 cask "basictex"
-cask "ghostty@tip"
+cask "ghostty"
 cask "macfuse"
 cask "notunes"
 cask "quarto"
