template ghostty config

--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -16,6 +16,7 @@ brew "python@3.12"
 brew "automake"
 brew "awscli"
 brew "bash"
+brew "bat"
 brew "bear"
 brew "bison"
 brew "boost"
@@ -106,6 +107,7 @@ brew "zoxide"
 brew "zsh-completions"
 brew "gromgit/fuse/s3fs-mac"
 cask "basictex"
+cask "firefox"
 cask "ghostty"
 cask "macfuse"
 cask "notunes"
