--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -6,10 +6,7 @@ LICENSE
 README.md
 
 # zsh
-zcompcache
-zcompdump
-zsh_history
-zsh_sessions
+.config/zsh/**
 
 # ghostty
 # .config/ghostty/shaders/**
