set path in zprofile

--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -20,6 +20,7 @@ brew "bat"
 brew "bear"
 brew "bison"
 brew "boost"
+brew "broot"
 brew "cairo"
 brew "coreutils"
 brew "emacs"
@@ -109,6 +110,7 @@ brew "gromgit/fuse/s3fs-mac"
 cask "basictex"
 cask "firefox"
 cask "ghostty"
+cask "libreoffice"
 cask "macfuse"
 cask "notunes"
 cask "quarto"
